# os-final

./: .gitignore  CMakeLists.txt  Instruction.md  Makefile  README.md  caching.c  create_file.c  fast.c  fast_mmap  fast_mmap.c  main.c  partner.txt  rdwr.c  rdwr.h  run  run.c  run2  run2.c  runbenchmark.cpp  system_call.c  tools.c  tools.h
docs/: 3.xls  DOCS.md  data.xls  data.xlsx
