cmake_minimum_required(VERSION 3.10)
project(run)
add_executable(run run.c rdwr.c tools.c)
project(run2)
add_executable(run2 run2.c rdwr.c tools.c)
project(caching)
add_executable(caching caching.c rdwr.c tools.c)
project(system_call)
add_executable(system_call system_call.c rdwr.c tools.c)
project(fast)
add_executable(fast fast.c)